[tool.poetry]
name = "get-certificate-chain"
version = "0.1.0"
description = "Library to obtain and work with a website's SSL certificates."
authors = ["giuli635 <giulitao635@gmail.com>", "Calvin Remsburg <cremsburg.dev@gmail.com>", " TheScriptGuy <@nolanrumble>"]
license = "MIT"
readme = "README.md"
packages = [{include = "get_certificate_chain"}]

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2023.7.22"
cryptography = "^41.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
